
2021-06-28  Ron Norman <rjn@inglenet.com> and Christian Lademann
	* fileio.c: Remove checks for /dev/stdin, etc... leave :CI:, :CO:, :CE:

2021-06-27  Ron Norman <rjn@inglenet.com>

	* common.h,fileio.h: Moved cob_status_extended to fileio.h
	* fileio.c: Added code to set some Microfocus specific status
	* fisam.c: Added code to set some Microfocus specific status

2021-06-26  Ron Norman <rjn@inglenet.com> and Christian Lademann

	* common.h: Add COB_DIALECT_xxx 
	* fileio.c: Preparing for dialect specific status codes

2021-06-11  Ron Norman <rjn@inglenet.com> and Christian Lademann

	* common.h: Add flag_is_std for LINE SEQUENTIAL :CI:, :CO:, :CE:
	* fileio.c: Add code for LINE SEQUENTIAL use of :CI:, :CO:, :CE:

2021-05-28  Ron Norman <rjn@inglenet.com>

	* move.c: Handle trailing sign with floating currency

2021-05-04  Ron Norman <rjn@inglenet.com>

	* common.c: Make a few variables 'static' to better 
			handle when there is an abort during dumping

2021-04-30  Ron Norman <rjn@inglenet.com>

	* fileio.c: Handle adding indexes for 'cobfile' utility

2021-04-27  Ron Norman <rjn@inglenet.com>

	* fileio.c: Add feature to drop index from file being created

2021-04-27  Ron Norman <rjn@inglenet.com>

	* common.c: Check COB_MODULE_PTR before using
	* common.h: Add cob_file . flag_updt_file for cobfile
	* fileio.c: Add cob_pre_open_def routine used by cobfile
	            Other changes so cobfile can copy attributes of
				one file into another before copying.

2021-04-25  Ron Norman <rjn@inglenet.com>

	* fileio.c: Check COB_MODULE_PTR before using

2021-04-03  Ron Norman <rjn@inglenet.com>

	* common.h: extern cob_sym_get_field and cob_sym_get_occurs
	* common.c: extern cob_sym_get_field and cob_sym_get_occurs
	* cobcapi.h: Add cob_get_field_value
	* cobcapi.c: Add cob_get_field_value

2021-04-01  Ron Norman <rjn@inglenet.com>

	* common.h: Add cob_trace_stmt_num  && cob_trace_get_stmt
	* common.c: Add cob_trace_stmt_num  && cob_trace_get_stmt
